--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <p>Keep out!</p>
   <div class="diary">
-  <img src="voicediary.webp">
+  <img src="voicediary.png">
 </div>
 </body>
 </html>
