--- a/index.html
+++ b/index.html
@@ -7,8 +7,21 @@
 
 <body>
   <p>KEEP OUT!</p>
-  <div class="diary">
-  <img src="voicediary.png">
-</div>
+
+  <input type="checkbox" id="toggle">
+
+  <div class="diary-wrapper">
+
+    <label for="toggle" class="diary">
+      <img src="voicediary.png">
+    </label>
+
+    <label for="toggle" class="diaryopen">
+      <img src="voicediaryopen.png">
+    </label>
+    
+  <img src="notepage.png" class="notepage">
+
+  </div>
 </body>
 </html>
