--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Webzinediary</title>
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Caveat+Brush&family=Gloria+Hallelujah&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -20,8 +21,9 @@
       <img src="voicediaryopen.png">
     </label>
     
+  <a href="https://ivysul.github.io/website-stickerpage/">
   <img src="notepage.png" class="notepage">
-
-  </div>
+</a>
+</div>
 </body>
 </html>
