--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     <label for="toggle" class="diaryopen">
       <img src="voicediaryopen.png">
     </label>
-    
+   <a href="https://ivysul.github.io/website-stickerpage/">
   <img src="notepage.png" class="notepage">
-
+</a> 
   </div>
 </body>
 </html>
